--- a/src/app/pages/board/task/task.component.html
+++ b/src/app/pages/board/task/task.component.html
@@ -2,7 +2,7 @@
     <div class="task">
         <div class="task-header">
             <div class="d-flex-sb-c">
-                <div class="${taskCategory}-task-header">
+                <div class="{{task.cat}}-task-header">
                     {{task.cat}}
                 </div>
                 <app-arrows [task]="task"></app-arrows>
@@ -22,8 +22,10 @@
             <progress class="progressbar" value="{{task.subtask.min}}" max="{{task.subtask.max}}"></progress>
         <p style="font-size: 12px;">{{task.subtask.min}}/{{task.subtask.max}} Subtasks</p>
     </div>
-    <div class="task-footer"><div class="avatar-div" id="avatar-container{{task.id}}">
-    </div>
+    <div class="task-footer">
+        <div class="avatar-div" id="avatar-container{{task.id}}">
+            <span *ngFor="let avatar of task.contact" class="avatar" [style.backgroundColor]="avatar.color" style="margin-left: -18px;">{{avatar.initials}}</span>
+        </div>
             <div>
                 <img src="assets/icons/{{task.prio}}.svg" alt="">
             </div>
