--- a/src/app/pages/board/task/task.component.scss
+++ b/src/app/pages/board/task/task.component.scss
@@ -40,3 +40,91 @@
     padding: 16px;
     cursor: pointer;
 }
+
+.task-text-bold {
+    font-weight: bold;
+    margin: 18px 0 10px 0;
+    height: 19.3px;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.avatar-div {
+    display: flex;
+    align-items: center;
+    margin-left: 18px;
+}
+
+.avatar {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    height: 25px;
+    margin-right: 8px;
+    font-size: 12px;
+    color: #fff;
+    text-align: center;
+    line-height: 30px;
+    border-radius: 50%;
+}
+
+.task-text {
+    color: #adadad;
+    height: 38.7px;
+    margin-bottom: 5px;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.progressbar {
+    width: 55%;
+}
+
+.subtasks-container {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 24px;
+    height: 16px;
+}
+
+.task-footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.task-container {
+    display: flex;
+    gap: 10px;
+    margin-top: 5px;
+    overflow-y: hidden;
+    overflow-x: auto;
+    padding: 10px;
+}
+
+.technicaltask-task-header {
+    background-color: #1fd7c1;
+    color: white;
+    width: 68%;
+    text-align: center;
+    border-radius: 8px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+}
+
+.technicaltask-header {
+    background-color: #1fd7c1;
+    color: white;
+    width: 68%;
+    text-align: center;
+    border-radius: 8px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+}
